--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "startup-business-landing-next",
-  "description": "Collection of free top of the line startup landing templates built using react/ next js. Free to download, simply edit and deploy! Updated weekly!",
+  "name": "respct club",
+  "description": "Become a shareholder in the journey of your favourite creators fans become investors",
   "formation": {
     "web": {
       "quantity": 1
